2010-01-27 Miguel de Dios  <miguel.dedios@artica.es>

	* operation/gis_maps/ajax.php: clean source code, erased comment lines.
	
	* include/functions_gis.php, godmode/gis_maps/configure_gis_map.php: clean
	source, change the name of saveMap2 to saveMap.

2010-01-27  Pablo de la Concepción <pablo.concepcion@artica.es>

	* include/functions_gis.php: Modiffied addPoint and addPointExtent to 
	receive more parmeters so it's possible to use any kind of point.
	Modified comments on saveMap2

	* operation/gis_maps/render_view.php: Used map_id instead if id when 
	the parameter passed in the url is a map id.
	Fixed to work with the new function getMapConf.
	Improved "pure" view. Still some things are hardcoded and needs improvement

	* operation/gis_maps/ajax.php: Modified to suppor calls to get info of 
	different kind of points. Removed hardcoded data.

	* operation/gis_maps/index.php:  Used map_id instead if id when
	the parameter passed in the url is a map id.

2010-01-27 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php: fix a typing "print_r" in function "getMapConf"
	and fill with code the function saveMap2 and add the commment in format
	phpdoc.

2010-01-27  Pablo de la Concepción <pablo.concepcion@artica.es>

	* include/functions_gis.php: Updated getMapConf to work with the new 
	database model;

2010-01-27 Miguel de Dios  <miguel.dedios@artica.es>
	* include/functions_gis.php: add the prototipe of function "saveMap2" at
	the moment for to develop in next hours or days.
	* include/javascript/jquery.json.js: add json plugin for jquery.
	* godmode/gis_maps/configure_gis_map.php: rewrite all source code, change
	the form and adapt to new gis tables.
	* godmode/gis_maps/index.php: few changes for more correct source code.

2010-01-27  Pablo de la Concepción <pablo.concepcion@artica.es>

	* include/functions_gis.php: Added more Openlayers Controls to the case
	on the printMap function, fixed typo manual_placemen -> manual_placement,